--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "ace-builds": "^1.4.12",
     "angular-split": "^5.0.0",
+    "ngx-highlightjs": "^4.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
