--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: "3.7"
 volumes:
   pgadmin_data:
     driver: local
-  pg_data:
-    driver: local
 
 networks:
   golculator:
@@ -14,57 +12,39 @@ services:
   db:
     image: postgres:13.2-alpine
     hostname: db
-    volumes:
-      - pg_data:/var/lib/postgresql/data
     ports:
-      - 6432:5432
-    container_name: go_db
+      - "${DB_PORT}:5432"
+    container_name: db
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER}" ]
       interval: 10s
       timeout: 5s
       retries: 5
     environment:
-      PGDATA: "/var/lib/postgresql/data/pgdata"
-      POSTGRES_PASSWORD: "TestPassw0rd!"
-      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "${DB_PASSWORD}"
+      POSTGRES_USER: "${DB_USER}"
+      POSTGRES_DB: "${DB_NAME}"
     networks:
       - golculator
 
-  pgadmin:
-    restart: always
-    image: dpage/pgadmin4
-    container_name: go_pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "test@mail.ru"
-      PGADMIN_DEFAULT_PASSWORD: "TestPassw0rd!"
-    depends_on:
-      db:
-        condition: service_healthy
-    ports:
-      - 6433:80
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
-    networks:
-      - golculator
-
-  golculator-service:
+  service:
     image: localhost:5000/golculator:latest
     build:
       context: .
       dockerfile: ./Dockerfile
-    container_name: golculator
+    container_name: service
+    hostname: service
     restart: unless-stopped
     expose:
-      - 3000
+      - ${APP_PORT}
     environment:
       DB_HOST: "db"
       DB_PORT: "5432"
-      DB_USER: "postgres"
-      DB_PASSWORD: "TestPassw0rd!"
-      DB_NAME: "golculator"
-      APP_PORT: "3000"
+      DB_USER: "${DB_USER}"
+      DB_PASSWORD: "${DB_PASSWORD}"
+      DB_NAME: "${DB_NAME}"
+      APP_PORT: "${APP_PORT}"
       ENVIRONMENT: "Docker"
     depends_on:
       db:
@@ -72,15 +52,15 @@ services:
     networks:
       - golculator
 
-  golculator-nginx:
+  nginx:
     build:
       context: .
       dockerfile: ./nginx/Dockerfile
-    container_name: golculator-nginx
+    container_name: nginx
     restart: unless-stopped
     ports:
-      - "3000:8989"
+      - "${APP_PORT}:8989"
     depends_on:
-      - golculator-service
+      - service
     networks:
       - golculator
